# Librarian

./: .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
docs/adr/: 0001-librarian-multi-backend-hsm-and-folder-metadata.md
librarian/: __init__.py  __main__.py  backup.py  bootstrap.py  bot.py  cli.py  dedup.py  deletion.py  enrich.py  exif.py  hashing.py  heal.py  icloud.py  ingest.py  models.py  offload.py  paths.py  roots.py  routing.py  schema.py  stability.py  store.py  tags.py  worker.py
librarian/backends/: __init__.py  base.py  local.py  rclone.py  registry.py  telegram.py
librarian/captioning/: __init__.py  _compose.py  book.py  generic.py  isbn.py  photo.py
tests/: conftest.py  test_backends.py  test_backup.py  test_book.py  test_bot.py  test_captioning.py  test_cli.py  test_dedup_pass.py  test_icloud.py  test_ingest.py  test_send_caption.py  test_tags.py  test_worker.py
