[project]
name = "librarian"
version = "0.0.1"
description = "Independent systemwide file manager: folder-tagged backup to multi-backend cold storage with on-demand retrieval."
requires-python = ">=3.13"
# Intentionally NO dependency on the archiver suite (core/dispatcher/…). Librarian
# vendors copied patterns under librarian/, never imports the suite. Runtime deps
# (telethon, rclone-via-CLI, pypdf, etc.) are added per phase as they land.
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["librarian*"]
